<resources>
    <string name="app_name">Todo App</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_reset_content">Please enter your email below to receive your password reset instructions</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="my_task">My Task</string>
    <string name="menu">Menu</string>
    <string name="quick">Quick</string>
    <string name="add_check_list">Add Check List</string>
    <string name="add_quick_note">Add Quick Note</string>
    <string name="work_list">Work List</string>
    <string name="filter">Filter</string>
    <string name="incomplete_tasks">Incomplete Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="projects">Projects</string>
    <string name="title">Title</string>
    <string name="choose_color">Choose color</string>
    <string name="add_tag">Add Tag</string>
    <string name="quick_notes">Quick Notes</string>
    <string name="create_tasks">Create Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="profile">Profile</string>
    <string name="change_image_from_camera">From camera</string>
    <string name="change_image_from_storage">From storage</string>
    <string name="remove_image">Remove image</string>
    <string name="sign_out">Sign out</string>
    <string name="new_task">New Task</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="add_task">Add Task</string>
    <string name="done">Done</string>
    <string name="add_new_item">Add new item</string>
    <string name="item_title">Item Title</string>
    <string name="next">Next</string>
    <string name="now">Now</string>
    <string name="tag">Tag</string>
    <string name="complete_task">Complete Task</string>
    <string name="no_task_message">No tasks here \n Tap the button to add new task</string>
    <string name="no_notes_and_checklists_message">No notes here \n Tap the button to add new note or new check list</string>
</resources>