<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_equalizer"
        app:showAsAction="always"
        android:id="@+id/tasks_filter"
        android:title="@string/filter">
        <menu>
            <item
                android:title="@string/incomplete_tasks"
                android:id="@+id/filter_incomplete"
                android:icon="@drawable/transparent_icon"/>
            <item
                android:title="@string/completed_tasks"
                android:id="@+id/filter_complete"
                android:icon="@drawable/transparent_icon"/>
            <item
                android:title="@string/all_tasks"
                android:id="@+id/filter_all"
                android:icon="@drawable/ic_filter_check"/>
        </menu>
    </item>
</menu>