<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_checklist_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_checklist_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/ToolbarTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="64dp"
                android:gravity="center"
                android:text="@string/add_check_list" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_checklist_actionbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/outlined_background"
                    android:paddingHorizontal="8dp"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/check_list_title"
                    android:fontFamily="@font/avenir_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/checklist_items"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_item"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/avenir_demi"
                    android:textColor="#353535"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_add"
                    app:drawableTint="@android:color/black"
                    android:id="@+id/add_new_item"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_color"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/avenir_demi"
                    android:textColor="#353535"
                    android:textSize="20sp"/>

                <uz.suhrob.todoapp.ui.custom.ColorPickerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/note_color_picker"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:fontFamily="@font/avenir_demi"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/add_checklist_btn" />

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>