<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_task_appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/ToolbarTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/work_list" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <uz.suhrob.todoapp.ui.custom.CustomCalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_task_appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/my_task_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/no_tasks"
        android:visibility="gone"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_task_message"
            android:gravity="center"
            android:fontFamily="@font/avenir_demi"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:fontFamily="@font/avenir_demi"
            android:id="@+id/add_task_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>